navbar and hero finish lv-basic responsive-ok

--- a/index.html
+++ b/index.html
@@ -13,16 +13,31 @@
 
 <body>
 
-    <div class="menu">
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Transferir</a></li>
-            <li><a href="#">Pagar</a></li>
-            <li><a href="#">Financiamiento</a></li>
-            <li><a href="#">Inversiones</a></li>
-            <li><a href="#">Más Opciones</a></li>
-        </ul>
-        
+    <div class="container-global">
+        <!-- NAVBAR =================/// -->
+        <nav class="navbar">
+            <div>
+                <img class="logo" src="./assets/img/logo.svg" alt="">
+            </div>
+            <ul class="flex">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Transferir</a></li>
+                <li><a href="#">Pagar</a></li>
+                <li><a href="#">Financiamiento</a></li>
+                <li><a href="#">Inversiones</a></li>
+                <li><a href="#">Opciones</a></li>
+            </ul>
+        </nav>
+
+        <!-- HERO =================/// -->
+        <div class="hero-container">
+            <img class="img-hero" src="./assets/img/hero.jpg" alt="">
+            <div class="hero-text">
+                <h1>Programador <span class="hero-span">Nocturno</span></h1>
+                <p>En la tranquilidad de la <span class="hero-span2"><a class="hero-span-a" href="https://www.universia.net/pe/actualidad/orientacion-academica/4-ventajas-estudiar-noche-1164037.html">NOCHE</a></span></p>
+            </div>
+        </div>
+
     </div>
 
 
@@ -31,4 +46,3 @@
 
 </html>
 
-<!-- icons -->
