--- a/index.html
+++ b/index.html
@@ -1,48 +1,54 @@
-<!DOCTYPE html>
-<html lang="es">
+<!DOCTYPE html> <!-- especificaciones de HTML5 -->
+<!-- <html> = elemento raíz -->
+<html lang="es"> <!-- Idioma Principal del documento-->
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<head> <!-- Metadatos -->
+    <meta charset="UTF-8"> <!-- codificación de carácteres -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--  compatibilidad de Internet Explorer-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- zoom mobile -->
+    <title>Document</title> <!-- titulo de la página-->
+    <!-- Enlaces a hojas de estilo -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/normalize.css">
+    <!-- CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
-<body>
+<body> <!-- contenido y estructura visible: texto, img, enlaces, videos, formularios-->
 
+    <!-- TODO: HEADER ////////////////////// -->
     <div class="container-global">
-        <!-- NAVBAR =================/// -->
-        <nav class="navbar">
-            <div>
-                <img class="logo" src="./assets/img/logo.svg" alt="">
-            </div>
-            <ul class="flex">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Transferir</a></li>
-                <li><a href="#">Pagar</a></li>
-                <li><a href="#">Financiamiento</a></li>
-                <li><a href="#">Inversiones</a></li>
-                <li><a href="#">Opciones</a></li>
-            </ul>
-        </nav>
-
-        <!-- HERO =================/// -->
-        <div class="hero-container">
-            <img class="img-hero" src="./assets/img/hero.jpg" alt="">
-            <div class="hero-text">
-                <h1>Programador <span class="hero-span">Nocturno</span></h1>
-                <p>En la tranquilidad de la <span class="hero-span2"><a class="hero-span-a" href="https://www.universia.net/pe/actualidad/orientacion-academica/4-ventajas-estudiar-noche-1164037.html">NOCHE</a></span></p>
-            </div>
-        </div>
-
+        <header class="header-container"> <!-- sección de encabezado logo, menu, hero-->
+            <!-- NAVBAR =================/// -->
+            <nav class="navbar">
+                <div id="logo-secret">
+                    <img class="logo" src="./assets/img/logo.svg" alt="">
+                </div>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Cv</a></li>
+                    <li><a href="#">Tutoriales</a></li>
+                    <li><a href="#">Cursos</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li style="display: none;"><a href="#">Admin</a></li>
+                </ul>
+            </nav>
+            <!-- HERO =================/// -->
+            <section class="hero-container">
+                <img class="img-hero" src="./assets/img/hero.jpg" alt="">
+                <div class="hero-text">
+                    <h1>Programador <span class="hero-span">Nocturno</span></h1>
+                    <p>En la tranquilidad de la <span class="hero-span2"><a class="hero-span-a"
+                                href="https://www.universia.net/pe/actualidad/orientacion-academica/4-ventajas-estudiar-noche-1164037.html">NOCHE</a></span>
+                    </p>
+                </div>
+            </section>
+            <header />
     </div>
 
 
-    <script src="./assets/js/app.js"></script>
+        <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
-
