finish modal - working login admin

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- NAVBAR =================/// -->
             <nav class="navbar">
                 <div id="logo-secret">
-                    <img class="logo" src="./assets/img/logo.svg" alt="">
+                    <img class="hero_cta logo" src="./assets/img/hacker-blue.svg" alt="">
                 </div>
                 <ul>
                     <li><a href="#">Inicio</a></li>
@@ -38,17 +38,38 @@
             <section class="hero-container">
                 <img class="img-hero" src="./assets/img/hero.jpg" alt="">
                 <div class="hero-text">
-                    <h1>Programador <span class="hero-span">Nocturno</span></h1>
+                    <h1>PROGRAMADOR <span class="hero-span">Nocturno</span></h1>
                     <p>En la tranquilidad de la <span class="hero-span2"><a class="hero-span-a"
                                 href="https://www.universia.net/pe/actualidad/orientacion-academica/4-ventajas-estudiar-noche-1164037.html">NOCHE</a></span>
                     </p>
                 </div>
             </section>
             <header />
+
+            <!-- MODAL -->
+            <section class="modal">
+                <div class="modal_container">
+                    <img src="./assets//img/modal.svg" class="modal_img" alt="logo">
+                    
+                    <form id="login-form" class="modal_form" action="">
+                        <!-- <label class="modal_label_form" for=""> Usuario</label> -->
+                        <div>
+                            <img class="login_icon" src="./assets/img/user2.png" alt="user" width="18px">
+                            <input id="user" class="modal_input_form" type="text" placeholder="user">
+                        </div>
+                        <!-- <label class="modal_label_form" for="">Password</label> -->
+                        <div>
+                            <img class="login_icon" src="./assets/img/pass.svg" alt="user" width="21px">
+                            <input id="password" class="modal_input_form" type="password" placeholder="password">
+                        </div>
+                    </form>
+                    <a id="power" href="#" class="modal_close">Entrar</a>
+                </div>
+            </section>
     </div>
 
 
-        <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
