--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,7 @@
     <title>Document</title> <!-- titulo de la página-->
     <!-- Enlaces a hojas de estilo -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <!-- CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -16,28 +17,27 @@
 
 <body> <!-- contenido y estructura visible: texto, img, enlaces, videos, formularios-->
 
+    <!-- style="display: none;"  -->
     <!-- TODO: HEADER ////////////////////// -->
     <div class="container-global">
         <header class="header-container"> <!-- sección de encabezado logo, menu, hero-->
             <!-- NAVBAR =================/// -->
             <nav class="navbar">
                 <div id="logo-secret">
-                    <img class="hero_cta logo" src="./assets/img/hacker-blue.svg" alt="">
+                    <img class="hero_cta logo" src="./assets/img/favicon.ico" alt="">
                 </div>
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="#">Proyectos</a></li>
-                    <li><a href="#">Tutoriales</a></li>
-                    <li><a href="#">Cursos</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Admin</a></li>
-                    <!-- <li><a href="#"><img src="./assets/img/exit-session.png" alt="" width="20px"></a></li> -->
+                    <li><a href="./proyectos.html">Projectos</a></li>
+                    <li><a href="./tutoriales.html">Tutoriales</a></li>
+                    <li><a href="./cursos.html">Cursos</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a style="color: rgb(86, 167, 201); font-weight: bolder;" href="#">Contacto</a></li>
+                    <li style="display: none;"><a href="#">Admin</a></li>
                 </ul>
             </nav>
+            <h1 style="color: white;">CONTACTO</h1>
             
-            
-        </div>
 
 
     <script src="./assets/js/app.js"></script>
