add blog-section & project-page

--- a/blog.html
+++ b/blog.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8"> <!-- codificación de carácteres -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--  compatibilidad de Internet Explorer-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- zoom mobile -->
-    <title>Document</title> <!-- titulo de la página-->
+    <title>Programador Nocturno - Blog</title> <!-- titulo de la página-->
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <!-- Enlaces a hojas de estilo -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/normalize.css">
-    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <!-- CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
