--- a/contacto.html
+++ b/contacto.html
@@ -10,35 +10,119 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <!-- Enlaces a hojas de estilo -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
     <!-- CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </head>
 
 <body> <!-- contenido y estructura visible: texto, img, enlaces, videos, formularios-->
 
     <!-- style="display: none;"  -->
     <!-- TODO: HEADER ////////////////////// -->
-    <div class="container-global">
-        <header class="header-container"> <!-- sección de encabezado logo, menu, hero-->
-            <!-- NAVBAR =================/// -->
-            <nav class="navbar">
-                <div id="logo-secret">
-                    <img class="hero_cta logo" src="./assets/img/favicon.ico" alt="">
-                </div>
-                <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./proyectos.html">Projectos</a></li>
-                    <li><a href="./tutoriales.html">Tutoriales</a></li>
-                    <li><a href="./cursos.html">Cursos</a></li>
-                    <li><a href="./blog.html">Blog</a></li>
-                    <li><a style="color: rgb(86, 167, 201); font-weight: bolder;" href="#">Contacto</a></li>
-                    <li style="display: none;"><a href="#">Admin</a></li>
-                </ul>
-            </nav>
-            <h1 style="color: white;">CONTACTO</h1>
-            
+    <header class="header-container"> <!-- sección de encabezado logo, menu, hero-->
+        <!-- NAVBAR =================/// -->
+        <nav class="navbar">
+            <div id="logo-secret">
+                <img class="hero_cta logo" src="./assets/img/favicon.ico" alt="">
+            </div>
+            <ul>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./proyectos.html">Projectos</a></li>
+                <li><a href="./tutoriales.html">Tutoriales</a></li>
+                <li><a href="./cursos.html">Cursos</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a style="color: rgb(86, 167, 201); font-weight: bolder;" href="#">Contacto</a></li>
+                <li style="display: none;"><a href="#">Admin</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <!-- TODO: CONTACT FORM -->
+    <div class="contactUs">
+        <div class="title">
+            <h2>Get in touch </h2>
+        </div>
+        <div class="box">
+            <!-- Form -->
+            <div class="contact form">
+                <h3>Send a Message</h3>
+                <form>
+                    <div class="formBox">
+                        <div class="row50">
+                            <div class="inputBox">
+                                <span>First Name</span>
+                                <input type="text" placeholder="john">
+                            </div>
+                            <div class="inputBox">
+                                <span>Last Name</span>
+                                <input type="text" placeholder="Doe">
+                            </div>
+                        </div>
+
+                        <div class="row50">
+                            <div class="inputBox">
+                                <span>Email</span>
+                                <input type="text" placeholder="johndoe@hotmail.com">
+                            </div>
+                            <div class="inputBox">
+                                <span>Mobile</span>
+                                <input type="text" placeholder="+56 9 85467687">
+                            </div>
+                        </div>
+
+                        <div class="row100">
+                            <div class="inputBox">
+                                <span>Message</span>
+                                <textarea placeholder="Write your message here..."></textarea>
+                            </div>
+                        </div>
+
+                        <div class="row100">
+                            <div class="inputBox">
+                                <input type="submit" value="Send">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <!-- info Box -->
+            <div class="contact info">
+                <h3>Contact Info</h3>
+                <div class="infoBox">
+                    <div>
+                        <span><ion-icon name="location"></ion-icon></span>
+                        <p>Cannaught Palace, New Delhi <br>INDIA</p>
+                    </div>
+                    <div>
+                        <span><ion-icon name="mail"></ion-icon></span>
+                        <a href="mailto:asd-dev@hotmail.com">asd-dev@hotmail.com</a>
+                    </div>
+                    <div>
+                        <span><ion-icon name="call"></ion-icon></span>
+                        <a href="tel:+56985467687">+56 9 85467687</a>
+                    </div>
+                    <!-- Social Media -->
+                    <ul class="sci">
+                        <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                        <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+                        <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                        <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Map -->
+            <div class="contact map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3324.1867187537473!2d-71.62933498797204!3d-33.574500973229355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x966239f610c0e0cd%3A0xb309ee483d85b953!2sPuerto%20San%20Antonio!5e0!3m2!1ses!2scl!4v1695176796388!5m2!1ses!2scl"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+
+    <!-- ICONS  https://ionic.io/ionicons-->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
     <script src="./assets/js/app.js"></script>
 </body>
