--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head> <!-- Metadatos -->
     <meta charset="UTF-8"> <!-- codificación de carácteres -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--  compatibilidad de Internet Explorer-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> <!-- zoom mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- zoom mobile -->
     <!-- SEO (Optimización para Motores de Búsqueda) -->
     <meta name="description" content="" Desbloquea el Mundo de la Programación: Guías, Tutoriales y Estrategias para
         Monetizar. Domina la codificación, descubre cómo monetizar tus habilidades y accede a recursos clave en nuestro
@@ -24,33 +25,33 @@
 <body> <!-- contenido y estructura visible: texto, img, enlaces, videos, formularios-->
 
     <!-- TODO: HEADER -->
-    <div class="container-global">
-        <header class="header-container"> <!-- sección de encabezado logo, menu, hero-->
-            <!-- TODO: NAVBAR -->
-            <nav class="navbar">
-                <div>
-                    <img class="hero_cta logo" src="./assets/img/favicon.ico" alt="">
-                </div>
-                <ul>
-                    <li><a style="color: rgb(86, 167, 201); font-weight: bolder;" href="./">Inicio</a></li>
-                    <li><a href="./proyectos.html">Projectos</a></li>
-                    <li><a href="/tutoriales.html">Tutoriales</a></li>
-                    <li><a href="./cursos.html">Cursos</a></li>
-                    <li><a href="/blog.html">Blog</a></li>
-                    <li><a href="./contacto.html">Contacto</a></li>
-                    <li style="display: none;"><a href="#">Admin</a></li>
-                </ul>
-            </nav>
-            <!-- TODO: HERO -->
-            <section class="hero-container">
-                <img class="img-hero" src="./assets/img/hero2.jpg" alt="">
-                <div class="hero-text">
-                    <h1>PROGRAMADOR <span class="hero-span">Nocturno</span></h1>
-                    <p>En la tranquilidad de la <span class="hero-span2"><a class="hero-span-a"
-                                href="https://www.universia.net/pe/actualidad/orientacion-academica/4-ventajas-estudiar-noche-1164037.html">NOCHE</a></span>
-                    </p>
-                </div>
-            </section>
+    <div class="container-global>
+        <header class=" header-container"> <!-- sección de encabezado logo, menu, hero-->
+        <!-- TODO: NAVBAR -->
+        <nav class="navbar">
+            <div>
+                <img class="hero_cta logo" src="./assets/img/favicon.ico" alt="">
+            </div>
+            <ul>
+                <li><a style="color: rgb(86, 167, 201); font-weight: bolder;" href="./">Inicio</a></li>
+                <li><a href="./proyectos.html">Projectos</a></li>
+                <li><a href="/tutoriales.html">Tutoriales</a></li>
+                <li><a href="./cursos.html">Cursos</a></li>
+                <li><a href="/blog.html">Blog</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
+                <li style="display: none;"><a href="#">Admin</a></li>
+            </ul>
+        </nav>
+        <!-- TODO: HERO -->
+        <section class="hero-container">
+            <img class="img-hero" src="./assets/img/hero2.jpg" alt="">
+            <div class="hero-text">
+                <h1>PROGRAMADOR <span class="hero-span">Nocturno</span></h1>
+                <p>En la tranquilidad de la <span class="hero-span2"><a class="hero-span-a"
+                            href="https://www.universia.net/pe/actualidad/orientacion-academica/4-ventajas-estudiar-noche-1164037.html">NOCHE</a></span>
+                </p>
+            </div>
+        </section>
         </header>
 
         <!-- TODO: MODAL -->
@@ -184,13 +185,11 @@
                         </div>
 
                     </div>
-
-
-
                 </div>
             </section>
 
         </main>
+
         <!-- TODO: FOOTER -->
         <footer class="pie-pagina">
             <div class="grupo-1">
@@ -216,11 +215,11 @@
                     </div>
                 </div>
             </div>
-
             <div class="grupo-2">
                 <small>&copy; 2021 <b>Programador N</b> - Todos los derechos reservados.</small>
             </div>
         </footer>
+
     </div>
 
 
